...
                    <UiText text={mail().subject} modifiers={subject} />
                    <UiText text={mail().preview} modifiers={preview} />
                  </UiVStack>
                </UiButton>
                <UiSlot name="actions" extraProps={trailing}>
                  <UiButton
                    label="Delete"
                    systemImage="trash"
                    role="destructive"
                    onButtonPress={() => front() && props.onRemove(mail())}
                  />
                  <UiButton
                    label="Archive"
                    systemImage="archivebox"
                    modifiers={archiveModifiers}
                    onButtonPress={() => front() && props.onArchive(mail())}
                  />
                </UiSlot>
              </UiSwipeActions>
...
